apps/base/paperless/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless
  namespace: paperless
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`paperless.homelab.cs-ol.de`)
      services:
        - kind: Service
          name: paperless
          port: 8000
  tls: {}
